# ros_jenkins

./: CMakeLists.txt  package.xml
.github/workflows/: cmake-single-platform.yml  industrial_ci.yml  main.yml  ros_industrial_ci.yml
.github/workflows/catkin_build/: catkin_build.yml
src/: test_node.cpp
